--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="portfolio">
             <!-- Portfolio item 01 -->
             <a href="portfolio-3.html" class="portfolio__item">
-                <img src="img/portfolio_03.png" alt="" class="portfolio__img">
+                <img src="img/app1.png" alt="" class="portfolio__img">
             </a>
             
             <!-- Portfolio item 02 -->
