--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/portfolio_01.jpg" alt="">
+            <img src="img/app1.png" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -35,7 +35,7 @@
             The title <strong>of my project</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-        <img src="img/portfolio_01.png" alt="" class="intro__img">
+        <img src="img/app1.png" alt="" class="intro__img">
     </section>
     
     <div class="portfolio-item-individual">
@@ -44,10 +44,8 @@
 
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="img/asteria.png" alt=""></div>
-          <div class="swiper-slide"><img src="img/asteria2.png" alt=""></div>
-          <div class="swiper-slide"><img src="img/asteria3.png" alt=""></div>
-          <div class="swiper-slide"><img src="img/asteria4.png" alt=""></div>
+          <div class="swiper-slide"><img src="img/app1.png" alt=""></div>
+          <div class="swiper-slide"><img src="img/app2.png" alt=""></div>
         </div>
     </div>
 
