--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -54,21 +54,19 @@
     </div>
 
    
-    
-    
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:hello@jane.dev" class="footer__link">suleiman3888@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="www.linkedin.com/in/belfarz">
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
-                    <i class="fab fa-dribbble"></i>
+                <a class="social-list__link" href="https://gitlab.com/suleiman3888">
+                    <i class="fab fa-gitlab"></i>
                 </a>
             </li>
             <li class="social-list__item">
@@ -77,7 +75,7 @@
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/belfarz">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
