--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -32,9 +32,9 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            The title <strong>of my project</strong>
+            The <strong>Asteria crash</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
+        <p class="section__subtitle section__subtitle--intro">A token airdrop site </p>
         <img src="img/asteria.png" alt="" class="intro__img">
     </section>
     
@@ -57,16 +57,16 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:hello@jane.dev" class="footer__link">suleiman3888@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="www.linkedin.com/in/belfarz">
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
-                    <i class="fab fa-dribbble"></i>
+                <a class="social-list__link" href="https://gitlab.com/suleiman3888">
+                    <i class="fab fa-gitlab"></i>
                 </a>
             </li>
             <li class="social-list__item">
@@ -75,7 +75,7 @@
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/belfarz">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
